[project]
name = "hexlet-code"
version = "0.1.0"
description = "This is the first project on hexlet."
autors = "Alexay Ilyushkin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "make>=0.1.6.post2",
    "prompt>=0.4.1",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
